@@ -10,52 +10,24 @@
 
 from __future__ import absolute_import
 
-from sys import argv
+import sys
 from tulip.compat import parse_qsl
-from tulip import bookmarks
+from tulip.url_dispatcher import urldispatcher
 # noinspection PyProtectedMember, PyUnresolvedReferences
-from resources.lib import fashiontv
+from resources.lib import fashiontv, utils
 
-syshandle = int(argv[1])
-sysaddon = argv[0]
-params = dict(parse_qsl(argv[2][1:]))
 
-########################################################################################################################
+def main(argv=None):
 
-action = params.get('action')
-url = params.get('url')
+    if sys.argv: argv = sys.argv
 
-########################################################################################################################
+    utils.check_inputstream_addon()
 
-if action is None:
+    params = dict(parse_qsl(argv[2][1:]))
+    action = params.get('action', 'root')
+    urldispatcher.dispatch(action, params)
 
-    fashiontv.Indexer().root()
 
-elif action == 'live':
+if __name__ == '__main__':
 
-    fashiontv.Indexer().live()
-
-elif action == 'play':
-
-    fashiontv.Indexer().play(url)
-
-elif action == 'youtube':
-
-    fashiontv.Indexer().yt(url)
-
-elif action == 'cache_clear':
-
-    from tulip.cache import clear
-    clear(withyes=False)
-
-elif action == 'addBookmark':
-
-    bookmarks.add(url)
-
-elif action == 'deleteBookmark':
-
-    bookmarks.delete(url)
-
-elif action == 'bookmarks':
-
-    fashiontv.Indexer().bookmarks()
+    sys.exit(main())
