@@ -1,3 +1,8 @@
+[B]1.2.0[/B]
+- Update youtube api keys
+- Rework of router scheme
+- Tweaks for Matrix
+
 [B]1.1.0[/B]
 - Add bookmarking feature
 
